# baremetal-cxx-coro

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  build_cmake.sh  build_cmake_native.sh  docker_entrypoint.sh  filter_addr.sh  filter_opcode.sh  format.sh  platformio.ini  post_build.py  qemu.sh  run_spike.cmd  spike_sim.gtkw
.github/workflows/: main.yml
cmake/: riscv.cmake
docs/diagrams/: Makefile  awaitable.puml  nop_task.puml  scheduler.puml  software_timer.puml  task_sequence.puml  tast_sequence_abstract.puml
include/: awaitable_timer.hpp  embeddev_coro.hpp  embeddev_riscv.hpp  nop_task.hpp  scheduler.hpp
include/coro/: awaitable_priority.hpp  awaitable_timer.hpp  awaitable_unordered.hpp  nop_task.hpp  scheduler.hpp  static_list.hpp
include/debug/: trace.hpp
include/host/: riscv-cpu.hpp  riscv-csr.hpp  riscv-irq.hpp  riscv-isa.hpp  timer.hpp
include/riscv/: riscv-csr.hpp  riscv-interrupts.hpp  riscv-irq.hpp  riscv-isa.hpp  scheduler-timer-mtimer.hpp  timer.hpp
src/: CMakeLists.txt  example_irq.cpp  example_irq.hpp  example_simple.cpp  example_simple.hpp  example_timer.cpp  example_timer.hpp  linker.lds  main.cpp  startup.cpp
test/: CMakeLists.txt  test_priority_coro.cpp  test_static_list.cpp  test_timer_coro.cpp  test_unordered.cpp  unit_tests.cpp
